# access

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  13-isolines-isochrones.ipynb  BACKLOG.md  CONTRIBUTING.md  DATA_DICTIONARY.md  DEVELOPMENT.md  HOW_ITS_MADE.md  NOTES.md  README.md  README_CEJST.md  SECURITY.md  TASK_ASSESSMENT.md  TEST_RESULTS.md  TROUBLESHOOTING.md  centroid_search_experiment.ipynb  download_graph.ipynb  dvc.yaml  environment.yml  portland_greenspace.ipynb  portland_greenspace_colab.ipynb  portland_isochrones.ipynb  pyproject.toml  run_pipeline.sh  test_optimizations.py  validate_upgrade.py  view_graph.ipynb
.cursor/: README.md  project.md  quick-reference.md
.dvc/: config
.github/: dependabot.yml
.github/workflows/: code-quality.yml  pages.yml  pr-check.yml  pr-preview.yml  security.yml  static.yml
data/: .gitignore  CEJST.dvc  Harvard.dvc  Maine DACF.dvc  OSM.dvc  US Census.dvc  blocks.dvc  cejst-me.zip.dvc  conserved_lands.dvc  graphs.dvc  h3j.schema.json.dvc  joins.dvc  minimum_walk_time.svg.dvc  pipeline_log.txt  pl_variables.json  pl_variables.json.dvc  tab2010_tab2020_st23_me.txt  tab2010_tab2020_st23_me.txt.dvc  tiles.dvc  tracts.dvc  walk_times.dvc
data/OSM/: .gitignore
data/OSM_NE/: .gitignore
data/blocks/: tl_2020_23_tabblock20_h3_5.csv  tl_2020_23_tabblock20_h3_6.csv  tl_2020_23_tabblock20_h3_7.csv  tl_2020_23_tabblock20_h3_8.csv
data/graphs/: greater_portland.graphml  maine_drive.graphml  maine_walk.graphml
data/joins/: ejblocks_nearest.geojson
data/tracts/: tl_2022_23_tract.csv  tl_2022_23_tract_h3_5.csv  tl_2022_23_tract_h3_6.csv  tl_2022_23_tract_h3_8.csv
data/walk_times/: walk_times_block_df.csv  walk_times_tract_df.csv
docs/: index.html  print.html  serve.sh
docs/css/: styles.css
docs/js/: map.js  print-map.js  scripts.js
docs/tiles/: metadata.json
docs/tiles/0/0/: 0.pbf
docs/tiles/1/0/: 0.pbf
docs/tiles/10/309/: 366.pbf  367.pbf  368.pbf  369.pbf  370.pbf  371.pbf
docs/tiles/10/310/: 365.pbf  366.pbf  367.pbf  368.pbf  369.pbf  370.pbf  371.pbf  372.pbf  373.pbf  374.pbf  375.pbf  376.pbf
docs/tiles/10/311/: 363.pbf  364.pbf  365.pbf  366.pbf  367.pbf  368.pbf  369.pbf  370.pbf  371.pbf  372.pbf  373.pbf  374.pbf  375.pbf  376.pbf
docs/tiles/10/312/: 361.pbf  362.pbf  363.pbf  364.pbf  365.pbf  366.pbf  367.pbf  368.pbf  369.pbf  370.pbf  371.pbf  372.pbf  373.pbf  374.pbf
docs/tiles/10/313/: 359.pbf  360.pbf  361.pbf  362.pbf  363.pbf  364.pbf  365.pbf  366.pbf  367.pbf  368.pbf  369.pbf  370.pbf  371.pbf  372.pbf  373.pbf
docs/tiles/10/314/: 358.pbf  359.pbf  360.pbf  361.pbf  362.pbf  363.pbf  364.pbf  365.pbf  366.pbf  367.pbf  368.pbf  369.pbf  370.pbf  371.pbf  372.pbf  373.pbf
docs/tiles/10/315/: 358.pbf  359.pbf  360.pbf  361.pbf  362.pbf  363.pbf  364.pbf  365.pbf  366.pbf  367.pbf  368.pbf  369.pbf  370.pbf  371.pbf  372.pbf  373.pbf
docs/tiles/10/316/: 358.pbf  359.pbf  360.pbf  361.pbf  362.pbf  363.pbf  364.pbf  365.pbf  366.pbf  367.pbf  368.pbf  369.pbf  370.pbf  371.pbf  372.pbf  373.pbf
docs/tiles/10/317/: 358.pbf  359.pbf  360.pbf  361.pbf  362.pbf  363.pbf  364.pbf  365.pbf  366.pbf  367.pbf  368.pbf  369.pbf  370.pbf  371.pbf  372.pbf
docs/tiles/10/318/: 358.pbf  359.pbf  360.pbf  361.pbf  362.pbf  363.pbf  364.pbf  365.pbf  366.pbf  367.pbf  368.pbf  369.pbf  370.pbf  371.pbf
docs/tiles/10/319/: 359.pbf  360.pbf  361.pbf  362.pbf  363.pbf  364.pbf  365.pbf  366.pbf  367.pbf  368.pbf  369.pbf  370.pbf  371.pbf
docs/tiles/10/320/: 365.pbf  366.pbf  367.pbf  368.pbf  369.pbf  370.pbf
docs/tiles/10/321/: 367.pbf  368.pbf  369.pbf
docs/tiles/11/619/: 733.pbf  734.pbf  735.pbf  736.pbf  737.pbf  738.pbf  739.pbf  740.pbf  741.pbf  742.pbf
docs/tiles/11/620/: 733.pbf  734.pbf  735.pbf  736.pbf  737.pbf  738.pbf  739.pbf  740.pbf  741.pbf  742.pbf  743.pbf  744.pbf  745.pbf  746.pbf  747.pbf  748.pbf  749.pbf  750.pbf
docs/tiles/11/621/: 731.pbf  732.pbf  733.pbf  734.pbf  735.pbf  736.pbf  737.pbf  738.pbf  739.pbf  740.pbf  741.pbf  742.pbf  743.pbf  744.pbf  745.pbf  746.pbf  747.pbf  748.pbf  749.pbf  750.pbf  751.pbf  752.pbf
notebooks/: 0a download_graphs.ipynb  0a view_graph.ipynb  0b centroid_search_experiment.ipynb  0c portland_isochrones.ipynb  13-isolines-isochrones.ipynb  1a walk_times_tracts.ipynb  1b walk_times_blocks.ipynb  1b_walk_times_blocks_executed.ipynb  2 merge_blocks.ipynb  3 analysis_blocks.ipynb  4 statistical_analysis.ipynb  5 figures.ipynb  6 h3.ipynb  6b h3 relationship file.ipynb  6c hex joins.ipynb  6d h3j.ipynb  analysis_blocks.ipynb  download_graph.ipynb  download_graphs.ipynb  generate_walk_times.ipynb  merge_blocks.ipynb  merge_tracts.ipynb  portland_greenspace.ipynb  portland_greenspace_colab.ipynb  portland_isochrones.ipynb  statistical_analysis.ipynb  tract_analysis.ipynb  tract_level_summary.ipynb  walk_times_blocks.ipynb  walk_times_tracts.ipynb
pr-previews/pr-2/: index.html
pr-previews/pr-5/: PRINT_PREVIEW_GUIDE.md  index.html
pr-previews/pr-5/js/: map.js
pr-previews/pr-6/data/: cejst.pmtiles
pr-previews/pr-7/: EXPORT_COMPARISON.md  print.html
src/: changelog.py  convert_to_pmtiles.py  crop_cejst_to_state.py  download_graphs.py  download_ne_pos.py  download_shps.py  exceptions.py  find_centroids.py  graph_points.py  h3utils.py  merge_graphs.py  migrate_to_geoparquet.py  plot.py  probe_data_sources.py  process_updated_data.py  remove_dvc.py  run_pipeline.py  trip_times.py  update_data_sources.py  utils.py  validate_data.py
src/analysis/: __init__.py  statistical.py
src/config/: __init__.py  defaults.py  regions.py
src/h3/: __init__.py  h3j.py  joins.py  relationship.py
src/h3_utils/: h3j.py  joins.py  relationship.py
src/merging/: __init__.py  analysis.py  blocks.py
src/utils/: __init__.py  retry.py  validation.py
src/visualization/: __init__.py  figures.py
src/walk_times/: __init__.py  algorithms.py  calculate.py  graph_utils.py
tests/: README.md  __init__.py  conftest.py  test_analysis.py  test_config.py  test_merging.py  test_walk_times.py
(+590 files in other folders)
