[project]
name = "access"
version = "0.1.0"
description = "Spatial accessibility analysis of conservation land access in Maine"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "osmnx==1.3.0",
    "geopandas>=0.14.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "contextily>=1.4.0",
    "tqdm>=4.65.0",
    "h3pandas>=0.2.0",
    "jsonschema>=4.17.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "ipywidgets>=8.1.0",
    "cenpy>=1.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "certifi>=2023.0.0",
    "nbconvert>=7.16.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = []

[tool.uv.sources]
# If you need to pin specific versions or use alternative sources, add them here

