[project]
name = "access"
version = "0.2.1"
description = "Spatial accessibility analysis of conservation land access in Maine"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "osmnx==1.3.0",
    "geopandas>=0.14.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "contextily>=1.4.0",
    "tqdm>=4.65.0",
    "h3pandas>=0.2.0",
    "jsonschema>=4.17.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "ipywidgets>=8.1.0",
    "cenpy>=1.0.0",
    "census>=0.8.19",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "certifi>=2023.0.0",
    "nbconvert>=7.16.6",
    "rustworkx>=0.14.0",
    "pyarrow>=14.0.0",
    "networkx>=3.0",
    "statsmodels>=0.14.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/config", "src/walk_times", "src/merging", "src/analysis", "src/visualization"]
force-include = { "src/config" = "config", "src/walk_times" = "walk_times", "src/merging" = "merging", "src/analysis" = "analysis", "src/visualization" = "visualization" }
# Note: src/h3 is not installed as a top-level package to avoid conflict with the installed h3 library
# Import h3 modules using: from src.h3.relationship import ...

[tool.uv.sources]
# If you need to pin specific versions or use alternative sources, add them here

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
]

