[project]
name = "access"
version = "0.2.1"
description = "Spatial accessibility analysis of conservation land access in Maine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "osmnx>=2.0.0",
    "geopandas>=0.14.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "contextily>=1.4.0",
    "tqdm>=4.65.0",
    "h3pandas>=0.2.0",
    "jsonschema>=4.17.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "ipywidgets>=8.1.0",
    "cenpy>=1.0.0",
    "census>=0.8.19",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "certifi>=2023.0.0",
    "nbconvert>=7.16.6",
    "rustworkx>=0.14.0",
    "pyarrow>=14.0.0",
    "networkx>=3.0",
    "statsmodels>=0.14.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/config", "src/walk_times", "src/merging", "src/analysis", "src/visualization", "src/h3_utils"]
force-include = { "src/config" = "config", "src/walk_times" = "walk_times", "src/merging" = "merging", "src/analysis" = "analysis", "src/visualization" = "visualization", "src/h3_utils" = "h3_utils" }

[tool.uv.sources]
# If you need to pin specific versions or use alternative sources, add them here

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "pip-audit>=2.7.0",
    "bandit[toml]>=1.7.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
]

# Black configuration
[tool.black]
line-length = 100
target-version = ['py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | data
  | docs
  | archived
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["data/*", "docs/*", "archived/*"]

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".eggs",
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "build",
    "dist",
    "data",
    "docs",
    "archived",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise from None
    "ARG002", # unused method argument
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG",  # unused arguments in tests
    "S101", # assert allowed in tests
]
"notebooks/**/*.py" = [
    "E402",  # module level import not at top of file
    "F401",  # imported but unused
    "F821",  # undefined name (common in notebooks where vars defined in previous cells)
    "F403",  # star imports (common in notebooks)
    "F405",  # may be undefined from star imports (common in notebooks)
    "B018",  # useless expression (common in notebooks for display purposes)
]

# mypy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true
exclude = [
    "tests/",
    "notebooks/",
    "data/",
    "docs/",
    "archived/",
]

[[tool.mypy.overrides]]
module = [
    "osmnx.*",
    "geopandas.*",
    "h3pandas.*",
    "cenpy.*",
    "census.*",
    "rustworkx.*",
]
ignore_missing_imports = true

# Bandit security linter configuration
[tool.bandit]
exclude_dirs = [
    "tests",
    "data",
    "docs",
    "archived",
]
skips = [
    "B101",  # assert_used (common in tests)
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
